添加接口获取系统所有api
